--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54138",
+      "applicationUrl": "http://*:54138",
       "sslPort": 44314
     }
   },
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000"
+      "applicationUrl": "https://*:5001;http://*:5000"
     }
   }
 }
