--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbContextnew": "Server=mssql,1433;Database=Demo;User ID=sa;Password=aA18bcPJPdR;"
+    "DbContextnew": "Server=mssql,1433;Database=SampleDB;User ID=sa;Password=aA18bcPJPdR;"
    // "DbContextnew": "Server=.;Database=Demo;user id=sa;password=dbpwd1"
     //"DbContextnew": "Server=(localdb)\\mssqllocaldb;Database=DbContextnew-c4f94beb-a605-4bed-9e4d-5767982310ee;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
